TPTP.java
/* TPTP.java */
/* Generated By:JavaCC: Do not edit this line. TPTP.java */
import java.util.Map;
import java.util.HashMap;
import java.util.Set;
import java.util.HashSet;
import java.util.LinkedHashSet;

public class TPTP implements TPTPConstants {
    static Map<String, Step> programSteps = new HashMap<>();
    static String firstNonSimpleStep = null; // name of first non-simple step, null if all simple so far
    static String programOutput = null;      // buffered until EOF confirmed

    public static void main(String args[]) {
        try {
            TPTP parser = new TPTP(System.in);  // create parser instance
            parser.Program();    // start parsing process 
            System.out.println(programOutput);  // final output for success
        } catch (TPTPException e) {
            // semantic error 
            System.out.println("Failure");
            System.err.println("Line " + e.line); // print line number 
            System.err.println(e.getMessage());
        } catch (ParseException e) {
            // javacc syntax error
            System.out.println("Failure");
            Token bad = e.currentToken.next;
            System.err.println("Line " + bad.beginLine); // print line number 
            System.err.println("Syntax error: expected " + buildExpected(e) + "; got " + (bad.kind == 0 ? "<EOF>" : "\"" + bad.image + "\"") + ".");     // Show expected tokens vs what was actually found
        } catch (TokenMgrError e) {
            // Lexical error (invalid character before parsing even starts)
            System.out.println("Failure");
            System.err.println("Line" + 1); // Lexer fails before token stream exists → default to line 1
            System.err.println("Lexical error: invalid character in input.");
        }
    }

    // turns javacc's expected token array into a readable string
    static String buildExpected(ParseException e) {
        Set<String> tokens = new LinkedHashSet<>();
        for (int[] seq : e.expectedTokenSequences){
            tokens.add(tokenImage[seq[0]].replaceAll("\"", ""));
        }
        return String.join(", ", tokens);
    }

    // checks if any subtraction appears anywhere in the tree
    static boolean containsMinus(Expr e) {
        if (e instanceof BinExpr) {
            BinExpr b = (BinExpr) e;
            if (b.op == '-'){
                return true;
            }
            return containsMinus(b.left) || containsMinus(b.right); // recursively search both subtrees
        }
        return false; // base cases (NumExpr, VarExpr) contain no operators
    }

    // no multiplication, subtraction only allowed with a numeric literal on the right
    static boolean isPositiveLinear(Expr e) {
        if (e instanceof BinExpr) {
            BinExpr b = (BinExpr) e;
            if (b.op == '*'){
                return false;
            }
            if (b.op == '-' && !(b.right instanceof NumExpr)){
                return false;
            }
            return isPositiveLinear(b.left) && isPositiveLinear(b.right); // recursively search both subtrees
        }
        return true; // variables and constants are always valid base cases
    }

    // evaluates expr at the minimum possible parameter values
    // used to check s3: when cond is false, false-branch exprs must be >= 0
    // when ID1 and ID2 take minimal values allowed by negated condition
    static long evalAtMin(Expr e, String id1, String id2, long min1, long min2) {
        if (e instanceof NumExpr){  // constant value
            return ((NumExpr) e).value;
        }
        // replace variable with min value 
        if (e instanceof VarExpr) {
            String n = ((VarExpr) e).name;
            if (n.equals(id1)) return min1;
            if (n.equals(id2)) return min2;
            return 0;
        }
        BinExpr b = (BinExpr) e;
        long left = evalAtMin(b.left, id1, id2, min1, min2);    // recursively evaluate both sides under minimum assignment
        long right = evalAtMin(b.right, id1, id2, min1, min2);
        if (b.op == '+'){
            return left + right;
        }
        if (b.op == '-'){
            return left - right;
        }
        return left * right;
    }

// Program -> StepList Run EOF
  static final public void Program() throws ParseException {
    StepList();
    Run();
    jj_consume_token(0);
}

// StepList -> (Step ;)+
  static final public void StepList() throws ParseException {
    label_1:
    while (true) {
      Step();
      jj_consume_token(SEMI);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
}

// Run -> run id (x,y) 
  static final public void Run() throws ParseException {Token t1, t2, t3;
    String startStep;
    long curX, curY;
    Map<String, Long> vars = new HashMap<>();
    Set<String> visited = new HashSet<>();
    String currentStep;
    String state;
    boolean isLoop = false;
    String terminatingStep = null;
    jj_consume_token(RUN);
    t1 = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    t2 = jj_consume_token(NUM);
    jj_consume_token(COMMA);
    t3 = jj_consume_token(NUM);
    jj_consume_token(RPAREN);
// start interpreting process
        startStep = t1.image;
        curX = Long.parseLong(t2.image);
        curY = Long.parseLong(t3.image);

        StringBuilder sb = new StringBuilder(); // used to build output message

        // checks to ensure there is a starting step
        Step start = programSteps.get(startStep);
        if (start == null) {
            {if (true) throw new TPTPException(t1.beginLine, "Starting step '" + start + "' is not defined.");}
        }
        // check if instructions contain a non simple instruction 
        if (firstNonSimpleStep != null) {
            sb.append("Success\n");
            sb.append("Non-simple\n");
            sb.append(firstNonSimpleStep);
            programOutput = sb.toString();
            {if ("" != null) return;}
        }

        currentStep = startStep;
        // loop through all instructions sequentially
        while (currentStep != null) {

            Step s = programSteps.get(currentStep);

            // stepped into an unknown name 
            if (s == null) {
                terminatingStep = currentStep;
                break;
            }

            // re-bind coordinates to this step's parameter names
            vars.put(s.id1, curX);
            vars.put(s.id2, curY);

            // creates state instance to add to previous states list 
            state = currentStep + " (" + curX + "," + curY + ")";

            if (visited.contains(state)) {
                isLoop = true;
                break;
            }

            visited.add(state);
            // chooses which branch to go down
            Branch branch = s.cond.eval(vars) ? s.trueBranch : s.falseBranch;

            // extracts x and y 
            if (branch.expr1 != null) {
                curX = branch.expr1.eval(vars);
                curY = branch.expr2.eval(vars);
            }

            currentStep = branch.nextStep;
        }
        // forms successful run output 
        sb.append("Success\n");
        if (isLoop) {
            sb.append("Simple\n");
            sb.append("Loop");
        } else {
            sb.append("Simple\n");
            sb.append(terminatingStep + " " + curX + " " + curY);
        }
        programOutput = sb.toString();
}

// Step -> ID : if Cond (id1,id2) TrueBranch else FalseBranch
  static final public Step Step() throws ParseException {String name;
    String id1, id2;
    Condition cond;
    Branch trueBranch;
    Branch falseBranch;
    String[] vars;
    name = jj_consume_token(ID).image;
if (programSteps.containsKey(name)) {   // step name already exists
            {if (true) throw new TPTPException(token.beginLine, "Step with name '" + name + "' already defined.");}
        }
    jj_consume_token(COLON);
    jj_consume_token(IF);
    cond = Cond();
    vars = VarPair();
id1 = vars[0];
        id2 = vars[1];

        if (id1.equals(id2)) {  // enforce different id rule
            {if (true) throw new TPTPException(token.beginLine, "Step parameters must be distinct; '" + id1 + "' used twice.");}
        }

        if (!cond.var.equals(id1) && !cond.var.equals(id2)) {   // condition must include variable from step parameter 
            {if (true) throw new TPTPException(token.beginLine, "Condition variable '" + cond.var + "' must be one of the step parameters ('" + id1 + "' or '" + id2 + "').");}
        }
    trueBranch = TrueBranch();
    jj_consume_token(ELSE);
    falseBranch = FalseBranch();
Step s = new Step();
        s.name = name;
        s.id1 = id1;
        s.id2 = id2;
        s.cond = cond;
        s.trueBranch = trueBranch;
        s.falseBranch = falseBranch;
        // adds instruction to instruction list to be interpreted
        programSteps.put(name, s);

        // simplicity checks — only care about the first violation
        if (firstNonSimpleStep == null) {

            boolean simple = true;
            // s1: Must all be positive linear 
            // s2: true-branch exprs must have no subtraction
            if (trueBranch.expr1 != null) {
                if (!isPositiveLinear(trueBranch.expr1)){
                    simple = false;
                }
                if (containsMinus(trueBranch.expr1)){
                    simple = false;
                }
            }
            if (trueBranch.expr2 != null) {
                if (!isPositiveLinear(trueBranch.expr2)){
                    simple = false;
                }
                if (containsMinus(trueBranch.expr2)) {
                    simple = false;
                }
            }

            // when cond is false: the constrained var is >= NUM, the other >= 0
            long min1, min2;
            if (cond.var.equals(id1)){
                min1 = cond.value;
                min2 = 0;
            }
            else{
                min1 = 0;
                min2 = cond.value;
            }

            // s3: false-branch exprs must be >= 0 at those minimums
            if (falseBranch.expr1 != null) {
                if (!isPositiveLinear(falseBranch.expr1)){
                    simple = false;
                }
                else if (evalAtMin(falseBranch.expr1, id1, id2, min1, min2) < 0){
                    simple = false;
                }
            }
            if (falseBranch.expr2 != null) {
                if (!isPositiveLinear(falseBranch.expr2)){
                    simple = false;
                }
                else if (evalAtMin(falseBranch.expr2, id1, id2, min1, min2) < 0){
                    simple = false;
                }
            }

            if (!simple){
                firstNonSimpleStep = name;
            }
        }

        {if ("" != null) return s;}
    throw new Error("Missing return statement in function");
}

// VarPair -> (t1,t2)
  static final public String[] VarPair() throws ParseException {Token t1, t2;
    jj_consume_token(LPAREN);
    t1 = jj_consume_token(ID);
    jj_consume_token(COMMA);
    t2 = jj_consume_token(ID);
    jj_consume_token(RPAREN);
{if ("" != null) return new String[]{t1.image, t2.image};}
    throw new Error("Missing return statement in function");
}

// trueBranch -> becomes (E1,E2) and STEP | STEP  
  static final public Branch TrueBranch() throws ParseException {Expr e1 = null, e2 = null;
    String next;
    Expr[] pair;
    Branch tmp = new Branch();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BECOMES:{
      jj_consume_token(BECOMES);
      pair = Pair();
      jj_consume_token(AND);
      next = jj_consume_token(ID).image;
e1 = pair[0];
            e2 = pair[1];
      break;
      }
    case ID:{
      next = jj_consume_token(ID).image;
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
tmp.expr1 = e1;
        tmp.expr2 = e2;
        tmp.nextStep = next;
        {if ("" != null) return tmp;}
    throw new Error("Missing return statement in function");
}

// falseBranch -> (E3,E4) and STEP | STEP
  static final public Branch FalseBranch() throws ParseException {Expr e1 = null, e2 = null;
    String next;
    Expr[] pair;
    Branch tmp = new Branch();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
      pair = Pair();
      jj_consume_token(AND);
      next = jj_consume_token(ID).image;
e1 = pair[0];
            e2 = pair[1];
      break;
      }
    case ID:{
      next = jj_consume_token(ID).image;
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
tmp.expr1 = e1;
        tmp.expr2 = e2;
        tmp.nextStep = next;
        {if ("" != null) return tmp;}
    throw new Error("Missing return statement in function");
}

// Pair -> (e1,e2)
  static final public Expr[] Pair() throws ParseException {Expr e1, e2;
    jj_consume_token(LPAREN);
    e1 = Expr();
    jj_consume_token(COMMA);
    e2 = Expr();
    jj_consume_token(RPAREN);
{if ("" != null) return new Expr[]{e1, e2};}
    throw new Error("Missing return statement in function");
}

// Cond -> ID < NUM
  static final public Condition Cond() throws ParseException {Token idToken, numToken;
    idToken = jj_consume_token(ID);
    jj_consume_token(LT);
    numToken = jj_consume_token(NUM);
Condition c = new Condition();
        c.var = idToken.image;
        c.value = Long.parseLong(numToken.image);
        {if ("" != null) return c;}
    throw new Error("Missing return statement in function");
}

// left-associative, + and - same precedence, * higher
  static final public Expr Expr() throws ParseException {Expr left, right;
    Token op;
    left = MulExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        right = MulExpr();
left = new BinExpr(left, op.image.charAt(0), right);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        right = MulExpr();
left = new BinExpr(left, op.image.charAt(0), right);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

// mulExpr -> base (x base)* 
  static final public Expr MulExpr() throws ParseException {Expr left, right;
    Token op;
    left = Base();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(TIMES);
      right = Base();
left = new BinExpr(left, op.image.charAt(0), right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

// Base -> NUM | ID | (Expr) | - Base
  static final public Expr Base() throws ParseException {Token t;
    Expr e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      t = jj_consume_token(NUM);
{if ("" != null) return new NumExpr(Long.parseLong(t.image));}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return new VarExpr(t.image);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      e = Expr();
      jj_consume_token(RPAREN);
{if ("" != null) return e;}
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      e = Base();
{if ("" != null) return new BinExpr(new NumExpr(0), '-', e);}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public TPTPTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x200000,0x200100,0x210000,0xc00,0xc00,0x1000,0x610800,};
	}

  /** Constructor with InputStream. */
  public TPTP(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TPTP(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new TPTPTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public TPTP(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new TPTPTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new TPTPTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public TPTP(TPTPTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TPTPTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
